ASMRegistry loads a URL instead of file with a path that's inside the jar file in discoverClasses().